--- a/src/pages/ru/services/index.astro
+++ b/src/pages/ru/services/index.astro
@@ -286,7 +286,7 @@ const t = useTranslations(lang);
                   </div>
 
                   <div class="w-full max-w-md mx-auto">
-                    <div class="divider mt-20"> Другие услуги </div>
+                    <div class="divider mt-20"> {t('service.cards.divider')} </div>
                   </div>
 
                   <div class="mx-auto mt-10 p-5 flex-row w-full rounded-box sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
@@ -401,7 +401,64 @@ const t = useTranslations(lang);
               </div>
 
               <input type="radio" name="my_tabs_1" role="tab" class="tab !w-[190px]" aria-label="Разработка telegram ботов" />
-              <div role="tabpanel" class="tab-content p-10">Прайс для разработки telegram ботов</div>
+              <div role="tabpanel" class="tab-content p-10">
+                
+
+                <div class="mx-auto mt-10 p-5 flex-row w-full rounded-box sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
+                  <div class="p-8 sm:p-10 grid grid-flow-row isolate relative overflow-hidden rounded-box">
+                    <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
+                      <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.07]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+                    </div>
+                    <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
+                      <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.07]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+                    </div>
+                    <div>
+                      <h2 class="text-4xl font-black tracking-tight not-prose" set:html={t('service.price.card.5.title')}></h2>
+                      <p class="mt-6 text-base leading-7" set:html={t('service.price.card.5.description')}></p>
+                    </div>
+                    <div class="flex items-center gap-x-4">
+                      <h4 class="flex-none text-sm font-semibold leading-6 text-primary">{t('service.price.card.5.futures.title')}</h4>
+                    </div>
+                    <ul role="list" class="grid grid-flow-row gap-4 text-sm leading-6 sm:grid-cols-2 sm:gap-6">
+                      <li class="flex gap-x-3">
+                        <svg class="h-6 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                          <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+                        </svg>
+                       <span>{t('service.price.card.5.futures.title.1')}</span>
+                      </li>
+                      <li class="flex gap-x-3">
+                        <svg class="h-6 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                          <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+                        </svg>
+                       <span class="tooltip tooltip-bottom text-left">{t('service.price.card.5.futures.title.2')}</span>
+                      </li>
+                      <li class="flex gap-x-3">
+                        <svg class="h-6 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                          <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+                        </svg>
+                       <span class="tooltip tooltip-bottom text-left hover:cursor-pointer" data-tip={t('service.price.card.5.futures.description.3')}>{t('service.price.card.5.futures.title.3')}</span>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="-mt-2 p-2 lg:mt-0 lg:w-full lg:max-w-md lg:flex-shrink-0 rounded-box">
+                    <div class="rounded-box bg-base-300 py-10 text-center ring-1 ring-inset ring-gray-900/5 lg:flex lg:flex-col lg:justify-center lg:py-16">
+                      <div class="mx-auto max-w-xs px-8">
+                        <p class="text-base font-semibold">{t('service.price.card.5.beforePrice')}</p>
+                        <p class="mt-6 flex items-baseline justify-center gap-x-2">
+                          <div class="text-5xl font-bold tracking-tight">
+                            <span class="tooltip tooltip-bottom hover:cursor-pointer" data-tip={t('service.price.card.5.price.description')}>{t('service.price.card.5.price')}</span>
+                            <span class="text-sm font-semibold leading-6 tracking-wide">{t('service.price.card.5.price.currency')}</span>
+                          </div>
+                        </p>
+                        <a href="#" class="mt-10 w-full btn btn-primary">{t('service.price.card.5.price.button')}</a>
+                        <p class="mt-6 text-xs leading-5">{t('service.price.card.5.price.cost.description')}</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+
+              </div>
             </div>
           </div>
 
@@ -418,13 +475,12 @@ const t = useTranslations(lang);
               </div>
             </div>
             <div class="grid place-content-center place-items-center gap-y-5">
-              <h3 class="text-lg tracking-tight text-primary">расширяйте функционал по мере роста проекта</h3>
-              <h2 class="text-7xl font-black tracking-tight not-prose mb-5">Ничего не подошло ?</h2>
+              <h3 class="text-lg tracking-tight text-primary">{t('service.screen.4.subTitle')}</h3>
+              <h2 class="text-7xl font-black tracking-tight not-prose mb-5">{t('service.screen.4.title')}</h2>
               <p class="text-center max-w-4xl">
-                Специально для вас есть отличное предложение, мы разрабатываем для вас базовую версию проекта, 
-                далее в зависимости от возможностей постепенно добавляем функции. 
+                {t('service.screen.4.description')}
               </p>
-              <a href="#" class="mt-10 btn btn-primary">{t('service.price.card.2.price.button')}</a>
+              <a href="#" class="mt-10 btn btn-primary">{t('service.screen.4.button')}</a>
             </div>
           </section>
 
