--- a/src/pages/ru/services/index.astro
+++ b/src/pages/ru/services/index.astro
@@ -164,7 +164,7 @@ const t = useTranslations(lang);
 
           <div class="mx-auto sm:text-center not-prose mt-44">
             <h2 class="text-6xl font-black tracking-tight text-primary">{t('service.price.title')}</h2>
-            <p class="mt-6 text-lg leading-8 flex flex-col-reverse w-full" set:html={t('service.price.subTitle')}> <a class="link link-primary" href={`/${lang}/terms`}>{t('service.price.subTitle.link')}</a></p>
+              <p class="mt-6 leading-8 flex flex-col-reverse w-full" set:html={t('service.price.subTitle')}> <a class="link link-primary" href={`/${lang}/terms`}>{t('service.price.subTitle.link')}</a></p>
           </div>
 
           <div class="mt-10">
