--- a/src/pages/ua/services/index.astro
+++ b/src/pages/ua/services/index.astro
@@ -13,14 +13,7 @@ const t = useTranslations(lang);
     <div class="mx-auto w-full max-w-[1024px]">
     <div class="absolute top-0 left-0 right-0 bottom-0 bg-grid z-[-1]"></div>
 
-    <section class="w-full min-w-full max-w-[1024px] mt-[80px] lg:mt-[150px] rounded-box p-5 lg:p-20 grid overflow-hidden isolate relative lg:h-svh">
-      <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
-        <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.05]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
-      </div>
-      <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
-        <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.05]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
-      </div>
-    
+    <section class="w-full min-w-full max-w-[1024px] mt-[80px] lg:mt-[150px] rounded-box p-5 lg:p-20 grid overflow-hidden lg:h-svh">
       <div class="grid not-prose p-3 lg:p-0">
         <div class="grid lg:grid-flow-col gap-y-20 lg:gap-y-0 place-content-start place-items-center">
           <div>
@@ -77,18 +70,12 @@ const t = useTranslations(lang);
             <h2 class="text-6xl font-black tracking-tight not-prose text-primary">{t('service.screen.3.title')}</h2>
           </div>
           <dl class="grid grid-cols-1 gap-x-8 gap-y-10 place-content-stretch lg:max-w-none lg:grid-cols-2 lg:gap-y-16">
-              <div class="overflow-hidden isolate relative p-10 rounded-box backdrop-blur-3xl not-prose">
+              <div class="overflow-hidden isolate relative p-10 rounded-box bg-base-300 not-prose">
                 <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-base-100">
                   <svg class="w-8 h-8 inline-block" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 48 48">
                     <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" d="M41.4 26.829a3.618 3.618 0 0 0 .699-4.142c-1.356-2.795-3.577-6.44-6.936-9.858a33.503 33.503 0 0 0-9.932-7.004c-1.366-.632-2.98-.32-4.045.744L9.172 18.583a3.62 3.62 0 0 0 0 5.12l5.047 5.047l-7.545 7.544c-1.36 1.36-1.56 3.598-.273 5.027a3.552 3.552 0 0 0 5.155.139l7.686-7.687l5.048 5.047a3.62 3.62 0 0 0 5.119 0zM13.489 14.265l20.238 20.237" />
                   </svg>
               </div>
-                <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
-                  <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.3]" style="clip-path: polygon(85.5% 40.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 87.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%)"></div>
-                </div>
-                <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
-                  <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.3]" style="clip-path: polygon(85.5% 40.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 87.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%)"></div>
-                </div>
                 <dt class="text-xl font-semibold leading-7 mt-3">
                   {t('service.screen.3.card.1.title')}
               </dt>
@@ -96,19 +83,13 @@ const t = useTranslations(lang);
                 {t('service.screen.3.card.1.description')}
               </dd>
             </div>
-            <div class="overflow-hidden isolate relative p-10 rounded-box backdrop-blur-3xl not-prose">
+            <div class="overflow-hidden isolate relative p-10 rounded-box bg-base-300 not-prose">
               <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-base-100">
                 <svg class="w-8 h-8 inline-block" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 48 48">
                   <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" d="M22.2 4.86L6.69 11.25V27C6.69 35.44 24 43.5 24 43.5S41.31 35.44 41.31 27V11.25L25.8 4.86a4.68 4.68 0 0 0-3.6 0" />
                   <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" d="M30.45 20.7H24v-8.92L17.69 25h6.45v8.92z" />
                 </svg>
             </div>
-              <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
-                <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.3]" style="clip-path: polygon(85.5% 40.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 87.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%)"></div>
-              </div>
-              <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
-                <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.3]" style="clip-path: polygon(85.5% 40.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 87.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%)"></div>
-              </div>
               <dt class="text-xl font-semibold leading-7 mt-3">
                 {t('service.screen.3.card.2.title')}
             </dt>
@@ -116,19 +97,13 @@ const t = useTranslations(lang);
               {t('service.screen.3.card.2.description')}
             </dd>
           </div>
-          <div class="overflow-hidden isolate relative p-10 rounded-box backdrop-blur-3xl not-prose">
+          <div class="overflow-hidden isolate relative p-10 rounded-box bg-base-300 not-prose">
             <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-base-100">
               <svg class="w-8 h-8 inline-block" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 512 512">
                 <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="10" d="M344 144c-3.92 52.87-44 96-88 96s-84.15-43.12-88-96c-4-55 35-96 88-96s92 42 88 96" />
                 <path fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="10" d="M256 304c-87 0-175.3 48-191.64 138.6C62.39 453.52 68.57 464 80 464h352c11.44 0 17.62-10.48 15.65-21.4C431.3 352 343 304 256 304Z" />
               </svg>
           </div>
-            <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
-              <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.3]" style="clip-path: polygon(85.5% 40.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 87.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%)"></div>
-            </div>
-            <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
-              <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.3]" style="clip-path: polygon(85.5% 40.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 87.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%)"></div>
-            </div>
             <dt class="text-xl font-semibold leading-7 mt-3">
               {t('service.screen.3.card.3.title')}
           </dt>
@@ -136,18 +111,12 @@ const t = useTranslations(lang);
             {t('service.screen.3.card.3.description')}
           </dd>
         </div>
-        <div class="overflow-hidden isolate relative p-10 rounded-box backdrop-blur-3xl not-prose">
+        <div class="overflow-hidden isolate relative p-10 rounded-box bg-base-300 not-prose">
           <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-base-100">
             <svg class="w-8 h-8 inline-block" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
               <path fill="none" stroke="currentColor" stroke-width="0.3" d="M4.222 19.778c4.296 4.296 11.26 4.296 15.556 0c4.296-4.296 4.296-11.26 0-15.556c-4.296-4.296-11.26-4.296-15.556 0c-4.296 4.296-4.296 11.26 0 15.556ZM6.343 21.9l4.243-4.242m-8.485 0l4.242-4.243m11.314-2.828l4.242-4.243m-8.485 0l4.243-4.242m-9.9 14.142a6 6 0 1 0 8.486-8.486a6 6 0 0 0-8.486 8.486Zm-5.656-9.9l4.242 4.243m0-8.485l4.243 4.242m2.828 11.314l4.243 4.242m0-8.485l4.242 4.243" />
             </svg>
         </div>
-          <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
-            <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.3]" style="clip-path: polygon(85.5% 40.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 87.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%)"></div>
-          </div>
-          <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
-            <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.3]" style="clip-path: polygon(85.5% 40.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 87.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%)"></div>
-          </div>
           <dt class="text-xl font-semibold leading-7 mt-3">
             {t('service.screen.3.card.4.title')}
         </dt>
