--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -8,12 +8,12 @@ const t = useTranslations(lang);
 <section class="relative isolate overflow-hidden bg-base-300 py-24 sm:py-32 mt-[80px] lg:mt-[150px] min-w-full  prose-invert">
     <div class="mx-auto max-w-5xl px-6 lg:px-8">
       <div class="mx-auto w-full max-w-4xl lg:mx-0">
-        <h2 class="text-4xl font-bold sm:text-6xl">{t('skills.title')}</h2>
+        <h2 class="text-4xl font-bold sm:text-6xl text-inherit">{t('skills.title')}</h2>
         <p class="mt-6 text-lg leading-8 max-w-xl text-pretty">{t('skills.description')}</p>
       </div>
       <div class="mx-auto mt-10 max-w-2xl lg:mx-0 lg:max-w-5xl">
         <div class="mt-24">
-          <h2>{t('skills.frontend.title')}</h3>
+          <h2 class="text-inherit">{t('skills.frontend.title')}</h3>
         </div>
         <dl class="mt-16 w-full max-w-5xl grid gap-8 sm:mt-20 gap-y-10 gap-x-5 lg:gap-x-10 grid-flow-row grid-cols-2 md:grid-flow-col md:grid-rows-2 place-content-center md:place-content-start place-items-center md:place-items-start not-prose">
           <div class="bg-base-100 rounded-box p-5 w-full md:w-60 grid place-content-center place-items-center place-self-stretch gap-y-5">
@@ -86,13 +86,13 @@ const t = useTranslations(lang);
           </div>
         </dl>
         <div class="mt-44">
-          <h2>{t('skills.backend.title')}</h3>
+          <h2 class="text-inherit">{t('skills.backend.title')}</h3>
             <dl class="mt-16 w-full max-w-5xl grid gap-8 sm:mt-20 gap-y-10 gap-x-5 lg:gap-x-10 grid-flow-row grid-cols-2 md:grid-flow-col md:grid-rows-2 place-content-center md:place-content-start place-items-center md:place-items-start not-prose">
               <div class="bg-base-100 rounded-box p-5 w-full md:w-60 grid place-content-center place-items-center place-self-stretch gap-y-5">
                 <dd class="text-2xl font-bold">
                   <svg class="inline-block w-8 h-8" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32">
                     <path fill="url(#vscodeIconsFileTypeAstro0)" d="M11.025 20.499c-.532 1.75-.154 4.184 1.105 5.331v-.042l.042-.112c.154-.741.756-1.203 1.526-1.175c.713.014 1.12.392 1.217 1.217c.042.308.042.616.056.938v.098c0 .7.196 1.371.588 1.959c.35.56.84.993 1.497 1.287l-.028-.056l-.028-.112c-.49-1.469-.14-2.49 1.147-3.358l.392-.266l.868-.573a4.254 4.254 0 0 0 1.791-3.037c.07-.532 0-1.05-.154-1.553l-.21.14c-1.945 1.035-4.17 1.4-6.325.98c-1.301-.197-2.56-.56-3.498-1.652z" />
-                    <path fill="#fff" d="M4.925 20.191s3.736-1.82 7.486-1.82l2.84-8.759c.098-.42.406-.7.756-.7s.644.28.756.714l2.826 8.746c4.45 0 7.487 1.82 7.487 1.82L20.709 2.84c-.168-.518-.49-.84-.896-.84h-7.612c-.406 0-.7.322-.896.84z" />
+                    <path fill="currentColor" d="M4.925 20.191s3.736-1.82 7.486-1.82l2.84-8.759c.098-.42.406-.7.756-.7s.644.28.756.714l2.826 8.746c4.45 0 7.487 1.82 7.487 1.82L20.709 2.84c-.168-.518-.49-.84-.896-.84h-7.612c-.406 0-.7.322-.896.84z" />
                     <defs>
                       <linearGradient id="vscodeIconsFileTypeAstro0" x1="8.19" x2="16.91" y1="23" y2="18.89" gradientTransform="translate(-.673 -2.198)scale(1.3993)" gradientUnits="userSpaceOnUse">
                         <stop offset="0" stop-color="#d83333" />
@@ -155,7 +155,7 @@ const t = useTranslations(lang);
             </dl>
           </div>
           <div class="mt-44">
-            <h2>{t('skills.another.title')}</h3>
+            <h2 class="text-inherit">{t('skills.another.title')}</h3>
               <dl class="mt-16 w-full max-w-5xl grid gap-8 sm:mt-20 gap-y-10 gap-x-5 lg:gap-x-10 md:grid-flow-col place-content-center md:place-content-between place-items-center md:place-items-start not-prose">
                 <div class="bg-base-100 rounded-box p-5 w-full md:w-60 grid place-content-start place-items-center place-self-stretch gap-y-5">
                   <dd class="text-2xl font-bold">
