--- a/src/pages/ru/contact/index.astro
+++ b/src/pages/ru/contact/index.astro
@@ -9,10 +9,10 @@ const t = useTranslations(lang);
 
 <Layout title=`${t('nav.contact')} - VRATSKYI`>
 
-    <section class="mx-auto w-full max-w-[800px] my-[200px] lg:min-h-svh">
+    <section class="mx-auto w-full max-w-[800px] my-[200px]">
         <div class="mx-auto w-full max-w-2xl">
             <h1>Связаться со мной</h1>
-            <p>Расскажите о сновоем проекте вкратце, чего бы вы хотели и чего ожидаете, так я смогу дать более четкий ответ.</p>
+            <p>Расскажите о своем проекте вкратце, что бы вы хотели и что ожидаете, так-же по возможности предоставте ссылку на ваш проект, так я смогу дать более четкий ответ.</p>
         </div>
 
         <ContactForm />
