--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,7 +8,10 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<div class="absolute top-0 left-0 right-0 bottom-0 bg-dots z-[-1]"></div>
+<div class="absolute top-0 left-0 right-0 bottom-0 z-[-1]">
+  
+</div>
+
 
 <section class="w-full min-w-full max-w-[1024px] mt-[80px] lg:mt-[150px] rounded-box p-5 lg:p-20 grid bg-base-300/50 backdrop-blur-3xl overflow-hidden isolate">
   <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
