--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,22 +3,23 @@ import { Image } from 'astro:assets'
 import Stats from './AuthorStats.astro'
 import author from '../images/oleksii-vratskyi.jpg'
 import { getLangFromUrl, useTranslations } from '../i18n/utils';
+import heroBg from '../images/main-hero-bg.png'
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
 <div class="absolute top-0 left-0 right-0 bottom-0 z-[-1]">
-  
+  <Image src={heroBg} class="w-full h-full object-cover object-center opacity-70" alt='main hero bg' format='webp'>
 </div>
 
 
-<section class="w-full min-w-full max-w-[1024px] mt-[80px] lg:mt-[150px] rounded-box p-5 lg:p-20 grid bg-base-300/50 backdrop-blur-3xl overflow-hidden isolate">
+<section class="w-full min-w-full max-w-[1024px] mt-[80px] lg:mt-[150px] rounded-box p-5 lg:p-20 grid bg-base-300/70 backdrop-blur-3xl overflow-hidden isolate">
   <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
-    <div class="aspect-[1097/845] w-[18.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-10" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+    <div class="aspect-[1097/845] w-[18.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-60" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
   </div>
   <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
-    <div class="aspect-[1097/845] w-[48.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+    <div class="aspect-[1097/845] w-[48.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-60" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
   </div>
 
   <div class="grid not-prose p-3 lg:p-0">
@@ -27,7 +28,7 @@ const t = useTranslations(lang);
 
         <div class="grid gap-y-5 lg:gap-y-0">
           <h1 class="text-7xl font-black">
-            <span class="text-gradient-shadow bg-clip-text text-transparent bg-gradient-to-r from-accent via-primary to-secondary glow-gradient-text">
+            <span class="bg-clip-text text-transparent bg-gradient-to-r from-secondary to-primary">
               {t('hero.title')}
             </span>
           </h1>
