--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -1,7 +1,4 @@
----
-
----
-<div class="mt-10 grid place-content-center">
+<div class="mt-5 grid place-content-center">
     
     <form method="POST" class="grid place-content-center mt-10 gap-y-5">
         <div class="grid grid-flow-col place-content-center gap-x-2">
@@ -22,9 +19,27 @@
                 <div class="label justify-end">
                     <span id="contactTextCounter" class="label-text-alt">0/900</span>
                   </div>
-                  <span class="label-text-alt">Отправляя форму вы соглашаетесь на обработку ваших <a href="#" class="link link-primary">персональных данных.</a></span>
-                  <button class="btn btn-sm btn-primary place-self-start">Отправить</button>
-        </form>
+                  <span class="label-text-alt">Отправляя форму вы соглашаетесь на обработку ваших 
+                    <button class="link link-primary no-underline" onclick="my_modal_3.showModal()">персональных данных.</button>
+                    
+                </span>
+                
+                
+                <button class="btn btn-sm btn-primary place-self-start">Отправить</button>
+            </form>
+            <dialog id="my_modal_3" class="modal">
+              <div class="modal-box">
+                <form method="dialog">
+                  <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
+                </form>
+                <h3 class="font-bold text-lg">Мы уважаем вашу конфиденциальность.</h3>
+                <p class="py-4">
+                    При отправке формы на нашем сайте вы соглашаетесь на обработку ваших 
+                    персональных данных в соответствии с нашей 
+                    <a class="link link-primary" href="#">политикой конфиденциальности.</a>
+                </p>
+              </div>
+            </dialog>
 </div>
 
 
