--- a/src/pages/ru/contact/index.astro
+++ b/src/pages/ru/contact/index.astro
@@ -1,22 +1,27 @@
 ---
-import Layout from '../../../layouts/Layout.astro'
+import Layout from "../../../layouts/Layout.astro";
 import { getLangFromUrl, useTranslations } from "../../../i18n/utils";
-import ContactForm from '../../../components/ContactForm.astro';
+import ContactForm from "../../../components/ContactForm.astro";
+import Socials from "../../../components/Socials.astro";
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
 <Layout title=`${t('nav.contact')} - VRATSKYI`>
-
-    <section class="mx-auto w-full max-w-[800px] my-[200px]">
-        <div class="mx-auto w-full max-w-2xl">
-            <h1>Связаться со мной</h1>
-            <p>Расскажите о своем проекте вкратце, что бы вы хотели и что ожидаете, так-же по возможности предоставте ссылку на ваш проект, так я смогу дать более четкий ответ.</p>
-        </div>
-
-        <ContactForm />
-
-    </section>
-    
+  <section class="mx-auto w-full max-w-[800px] my-[200px]">
+    <div class="mx-auto w-full max-w-2xl">
+      <h1>Связаться со мной</h1>
+      <p>
+        Расскажите о своем проекте вкратце, что бы вы хотели и что ожидаете,
+        так-же по возможности предоставте ссылку на ваш проект, так я смогу дать
+        более четкий ответ.
+      </p>
+     <div class="flex items-center">Я в социальных сетях: <div class="ml-5 bg-base-300 rounded-box"><Socials /></div></div> 
+    </div>
+    <div class="w-full max-w-md mx-auto">
+        <div class="divider mt-10"></div>
+      </div>
+    <ContactForm />
+  </section>
 </Layout>
