--- a/src/pages/ru/services/index.astro
+++ b/src/pages/ru/services/index.astro
@@ -194,7 +194,7 @@ const t = useTranslations(lang);
                               <span class="text-sm font-semibold leading-6 tracking-wide">{t('service.price.card.1.price.currency')}</span>
                             </div>
                           </p>
-                          <a href="#" class="mt-10 w-full btn btn-primary">{t('service.price.card.1.price.button')}</a>
+                          <a href={`/${lang}/contact`} class="mt-10 w-full btn btn-primary">{t('service.price.card.1.price.button')}</a>
                           <p class="mt-6 text-xs leading-5">{t('service.price.card.1.price.cost.description')}</p>
                         </div>
                       </div>
@@ -247,7 +247,7 @@ const t = useTranslations(lang);
                               <span class="text-sm font-semibold leading-6 tracking-wide">{t('service.price.card.2.price.currency')}</span>
                             </div>
                           </p>
-                          <a href="#" class="mt-10 w-full btn btn-primary">{t('service.price.card.2.price.button')}</a>
+                          <a href={`/${lang}/contact`} class="mt-10 w-full btn btn-primary">{t('service.price.card.2.price.button')}</a>
                           <p class="mt-6 text-xs leading-5">{t('service.price.card.2.price.cost.description')}</p>
                         </div>
                       </div>
@@ -304,7 +304,7 @@ const t = useTranslations(lang);
                               <span class="text-sm font-semibold leading-6 tracking-wide">{t('service.price.card.3.price.currency')}</span>
                             </div>
                           </p>
-                          <a href="#" class="mt-10 w-full btn btn-primary">{t('service.price.card.3.price.button')}</a>
+                          <a href={`/${lang}/contact`} class="mt-10 w-full btn btn-primary">{t('service.price.card.3.price.button')}</a>
                           <p class="mt-6 text-xs leading-5">{t('service.price.card.3.price.cost.description')}</p>
                         </div>
                       </div>
@@ -358,7 +358,7 @@ const t = useTranslations(lang);
                               <span class="text-sm font-semibold leading-6 tracking-wide">{t('service.price.card.4.price.currency')}</span>
                             </div>
                           </p>
-                          <a href="#" class="mt-10 w-full btn btn-primary">{t('service.price.card.4.price.button')}</a>
+                          <a href={`/${lang}/contact`} class="mt-10 w-full btn btn-primary">{t('service.price.card.4.price.button')}</a>
                           <p class="mt-6 text-xs leading-5">{t('service.price.card.4.price.cost.description')}</p>
                         </div>
                       </div>
@@ -419,7 +419,7 @@ const t = useTranslations(lang);
                             <span class="text-sm font-semibold leading-6 tracking-wide">{t('service.price.card.5.price.currency')}</span>
                           </div>
                         </p>
-                        <a href="#" class="mt-10 w-full btn btn-primary">{t('service.price.card.5.price.button')}</a>
+                        <a href={`/${lang}/contact`} class="mt-10 w-full btn btn-primary">{t('service.price.card.5.price.button')}</a>
                         <p class="mt-6 text-xs leading-5">{t('service.price.card.5.price.cost.description')}</p>
                       </div>
                     </div>
@@ -449,7 +449,7 @@ const t = useTranslations(lang);
               <p class="text-center max-w-4xl">
                 {t('service.screen.4.description')}
               </p>
-              <a href="#" class="mt-10 btn btn-primary">{t('service.screen.4.button')}</a>
+              <a href={`/${lang}/contact`} class="mt-10 btn btn-primary z-10">{t('service.screen.4.button')}</a>
             </div>
           </section>
 
