--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -26,7 +26,7 @@ const t = useTranslations(lang);
           </div>
           <div class="bg-base-100 rounded-box p-5 w-full md:w-60 grid place-content-center place-items-center place-self-stretch gap-y-5">
             <dd class="text-2xl font-light text-primary">
-              daisyUI
+              UI Kit's
             </dd>
           </div>
           <div class="bg-base-100 rounded-box p-5 w-full md:w-60 grid place-content-center place-items-center place-self-stretch gap-y-5">
