--- a/src/pages/ua/services/index.astro
+++ b/src/pages/ua/services/index.astro
@@ -11,7 +11,7 @@ const t = useTranslations(lang);
 
 <Layout title=`${t('nav.services')} - VRATSKYI`>
     <div class="mx-auto w-full max-w-[1024px]">
-    <div class="absolute top-0 left-0 right-0 bottom-0 bg-grid z-[-1]"></div>
+    <div class="absolute top-0 left-0 right-0 bottom-0 z-[-1]"></div>
 
     <section class="w-full min-w-full max-w-[1024px] mt-[80px] lg:mt-[150px] rounded-box p-5 lg:p-20 grid overflow-hidden lg:h-svh">
       <div class="grid not-prose p-3 lg:p-0">
