--- a/src/components/MyGithub.astro
+++ b/src/components/MyGithub.astro
@@ -6,7 +6,7 @@ const t = useTranslations(lang);
 ---
 
 <section class="grid mx-auto lg:min-w-full lg:h-full lg:max-h-svh relative overflow-hidden">
-    <div class="absolute top-0 left-0 right-0 bottom-0 bg-grid z-[-1]"></div>
+    <div class="absolute top-0 left-0 right-0 bottom-0 bg-dots z-[-1]"></div>
     
     <div class="grid place-content-center place-self-center mx-auto max-w-[1024px] rounded-box z-30 p-2 md:p-28">
         <div class="grid place-self-center place-items-center place-content-center mt-10 md:mt-0 mb-10">
