--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -48,43 +48,50 @@ const t = useTranslations(lang);
 </div>
 
 <script type="text/javascript" transition:persist data-astro-rerun is:inline>
-    document.addEventListener('astro:page-load', async () => {
+document.addEventListener('astro:page-load', () => {
+  const form = document.getElementById("my-form");
+  const status = document.getElementById("my-form-status");
 
-        const form = document.getElementById("my-form");
-        const status = document.getElementById("my-form-status");
+  // Получаем текущую локаль из URL
+  const lang = window.location.pathname.split('/')[1];
 
-        async function handleSubmit(event) {
-            event.preventDefault();
+  async function handleSubmit(event) {
+    event.preventDefault();
 
-            const formData = new FormData(form);
-            const data = {};
-            formData.forEach((value, key) => {
-                data[key] = value;
-            });
-
-            fetch(form.action, {
-                method: form.method,
-                body: JSON.stringify(data),
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-            }).then(response => {
-                if (response.ok) {
-                    // Если отправка успешна, устанавливаем классы для успешной отправки
-                    window.location.href = `/success`;
-                    form.reset();
-                } else {
-                    // Если произошла ошибка, устанавливаем классы для ошибки
-                    window.location.href = `/failed`;
-                }
-            }).catch(error => {
-                // Если произошла ошибка при отправке, устанавливаем классы для ошибки
-                window.location.href = `/error`;
-            });
-        }
-
-        form.addEventListener("submit", handleSubmit);
+    // Получаем данные из полей формы
+    const formData = new FormData(form);
+    const data = {};
+    formData.forEach((value, key) => {
+      data[key] = value;
     });
+
+    // Отправляем данные на сервер
+    fetch(form.action, {
+      method: form.method,
+      body: JSON.stringify(data), // Преобразуем данные в формат JSON
+      headers: {
+        'Content-Type': 'application/json',
+      },
+    }).then(response => {
+      if (response.ok) {
+        window.location.href = `/${lang}/contact/success`; // Вставляем текущую локаль в ссылку
+        form.reset();
+      } else {
+        response.json().then(data => {
+          if (data && data.errors) {
+            status.innerHTML = data.errors.map(error => error.message).join(", ");
+          } else {
+            window.location.href = `/${lang}/contact/failed`; // Вставляем текущую локаль в ссылку
+          }
+        });
+      }
+    }).catch(error => {
+        window.location.href = `/${lang}/contact/error`; // Вставляем текущую локаль в ссылку
+    });
+  }
+
+  form.addEventListener("submit", handleSubmit);
+});
 </script>
 
 <script type="text/javascript" transition:persist data-astro-rerun is:inline>
