--- a/src/pages/ua/services/index.astro
+++ b/src/pages/ua/services/index.astro
@@ -11,8 +11,6 @@ const t = useTranslations(lang);
 
 <Layout title=`${t('nav.services')} - VRATSKYI`>
     <div class="mx-auto w-full max-w-[1024px]">
-    <div class="absolute top-0 left-0 right-0 bottom-0 z-[-1]"></div>
-
     <section class="w-full min-w-full max-w-[1024px] mt-[80px] lg:mt-[150px] rounded-box p-5 lg:p-20 grid overflow-hidden lg:h-svh">
       <div class="grid not-prose p-3 lg:p-0">
         <div class="grid lg:grid-flow-col gap-y-20 lg:gap-y-0 place-content-start place-items-center">
@@ -194,7 +192,7 @@ const t = useTranslations(lang);
                               <span class="text-sm font-semibold leading-6 tracking-wide">{t('service.price.card.1.price.currency')}</span>
                             </div>
                           </p>
-                          <a href="#" class="mt-10 w-full btn btn-primary">{t('service.price.card.1.price.button')}</a>
+                          <a href={`/${lang}/contact`} class="mt-10 w-full btn btn-primary">{t('service.price.card.1.price.button')}</a>
                           <p class="mt-6 text-xs leading-5">{t('service.price.card.1.price.cost.description')}</p>
                         </div>
                       </div>
@@ -247,7 +245,7 @@ const t = useTranslations(lang);
                               <span class="text-sm font-semibold leading-6 tracking-wide">{t('service.price.card.2.price.currency')}</span>
                             </div>
                           </p>
-                          <a href="#" class="mt-10 w-full btn btn-primary">{t('service.price.card.2.price.button')}</a>
+                          <a href={`/${lang}/contact`} class="mt-10 w-full btn btn-primary">{t('service.price.card.2.price.button')}</a>
                           <p class="mt-6 text-xs leading-5">{t('service.price.card.2.price.cost.description')}</p>
                         </div>
                       </div>
@@ -304,7 +302,7 @@ const t = useTranslations(lang);
                               <span class="text-sm font-semibold leading-6 tracking-wide">{t('service.price.card.3.price.currency')}</span>
                             </div>
                           </p>
-                          <a href="#" class="mt-10 w-full btn btn-primary">{t('service.price.card.3.price.button')}</a>
+                          <a href={`/${lang}/contact`} class="mt-10 w-full btn btn-primary">{t('service.price.card.3.price.button')}</a>
                           <p class="mt-6 text-xs leading-5">{t('service.price.card.3.price.cost.description')}</p>
                         </div>
                       </div>
@@ -358,7 +356,7 @@ const t = useTranslations(lang);
                               <span class="text-sm font-semibold leading-6 tracking-wide">{t('service.price.card.4.price.currency')}</span>
                             </div>
                           </p>
-                          <a href="#" class="mt-10 w-full btn btn-primary">{t('service.price.card.4.price.button')}</a>
+                          <a href={`/${lang}/contact`} class="mt-10 w-full btn btn-primary">{t('service.price.card.4.price.button')}</a>
                           <p class="mt-6 text-xs leading-5">{t('service.price.card.4.price.cost.description')}</p>
                         </div>
                       </div>
@@ -419,14 +417,12 @@ const t = useTranslations(lang);
                             <span class="text-sm font-semibold leading-6 tracking-wide">{t('service.price.card.5.price.currency')}</span>
                           </div>
                         </p>
-                        <a href="#" class="mt-10 w-full btn btn-primary">{t('service.price.card.5.price.button')}</a>
+                        <a href={`/${lang}/contact`} class="mt-10 w-full btn btn-primary">{t('service.price.card.5.price.button')}</a>
                         <p class="mt-6 text-xs leading-5">{t('service.price.card.5.price.cost.description')}</p>
                       </div>
                     </div>
                   </div>
                 </div>
-
-
               </div>
             </div>
           </div>
@@ -449,7 +445,7 @@ const t = useTranslations(lang);
               <p class="text-center max-w-4xl">
                 {t('service.screen.4.description')}
               </p>
-              <a href="#" class="mt-10 btn btn-primary">{t('service.screen.4.button')}</a>
+              <a href={`/${lang}/contact`} class="mt-10 btn btn-primary z-10">{t('service.screen.4.button')}</a>
             </div>
           </section>
 
