--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,6 @@ const t = useTranslations(lang);
       <a href={`/${lang}/services`} class="link link-hover hover:text-primary duration-150">{t('nav.services')}</a>
       <a href={`/${lang}/about`} class="grid grid-flow-col place-content-stretch hover:text-primary duration-150">{t('nav.about')}</a>
       <a class="link link-hover hover:text-primary duration-150" href={`/${lang}/contact`}>{t('nav.contact')}</a>
-      <a class="link link-hover hover:text-primary duration-150" href={`/${lang}/terms`}>{t('nav.terms')}</a>
     </nav>
     <div>
       <a class="btn btn-sm btn-outline btn-primary" href="https://donatello.to/vratskyi" target="_blank">{t('footer.donate')}
@@ -28,7 +27,13 @@ const t = useTranslations(lang);
       </div>
     </div> 
     <aside>
-      <div set:html={t('footer.copyright')}></div>
+      <div class="grid gap-y-5">
+        <div class="grid grid-flow-col gap-x-5 place-items-center">
+          <a class="link link-hover hover:text-primary duration-150" href={`/${lang}/terms`}>{t('nav.terms')}</a>
+          <a class="link link-hover hover:text-primary duration-150" href={`/${lang}/privacy-policy`}>{t('nav.privacy')}</a>
+        </div>
+        <div set:html={t('footer.copyright')}></div>
+      </div>
       <Logo />
     </aside>
   </footer>
