--- a/src/pages/ua/contact/index.astro
+++ b/src/pages/ua/contact/index.astro
@@ -23,5 +23,6 @@ const t = useTranslations(lang);
         <div class="divider mt-10"></div>
       </div>
     <ContactForm />
+    <div class="label-text-alt mt-10 w-full max-w-lg mx-auto">Відправляючи заявку ви погоджуєтеся з нашою <a class="link link-primary" href={`/${lang}/privacy-policy`}>політикою конфеденційності.</a></div>
   </section>
 </Layout>
