--- a/src/components/MyGithub.astro
+++ b/src/components/MyGithub.astro
@@ -32,7 +32,7 @@ const t = useTranslations(lang);
                     </rect>
                 </svg>
                 <div class="grid gap-y-5">
-                    <h2 class="text-6xl my-auto font-black">
+                    <h2 class="text-6xl my-auto font-black animate">
                         {t('mygithub.title')}
                     </h2>
                     <a class="btn btn-active btn-sm btn-primary place-self-start pt-1" href="https://github.com/vratskyi" target="_blank">
