--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -8,8 +8,8 @@ const t = useTranslations(lang);
 <section class="relative isolate overflow-hidden bg-base-300 py-24 sm:py-32 mt-[80px] lg:mt-[150px] min-w-full  prose-invert">
     <div class="mx-auto max-w-5xl px-6 lg:px-8">
       <div class="mx-auto w-full max-w-4xl lg:mx-0">
-        <h2 class="text-4xl font-bold sm:text-6xl text-inherit">{t('skills.title')}</h2>
-        <p class="mt-6 text-lg leading-8 max-w-xl text-pretty">{t('skills.description')}</p>
+        <h2 class="text-4xl font-bold sm:text-6xl text-inherit animate">{t('skills.title')}</h2>
+        <p class="mt-6 text-lg leading-8 max-w-xl text-pretty animate">{t('skills.description')}</p>
       </div>
       <div class="mx-auto mt-10 max-w-2xl lg:mx-0 lg:max-w-5xl">
         <div class="mt-24">
