--- a/src/pages/ru/services/index.astro
+++ b/src/pages/ru/services/index.astro
@@ -54,9 +54,9 @@ const t = useTranslations(lang);
           <div class="aspect-[543/845] w-[35.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.3] rotate-[60deg]" style="clip-path: polygon(85.5% 40.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 87.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%)"></div>
         </div>
       </div>
-      <h3 class="text-base font-semibold leading-7 text-primary">{t('service.screen.2.subTitle')}</h3>
-      <h2 class="mt-2 text-6xl font-bold tracking-tight">{t('service.screen.2.title')}</h2>
-      <p class="mt-6 text-lg leading-8">
+      <h3 class="text-base font-semibold leading-7 text-primary animate">{t('service.screen.2.subTitle')}</h3>
+      <h2 class="mt-2 text-6xl font-bold tracking-tight animate">{t('service.screen.2.title')}</h2>
+      <p class="mt-6 text-lg leading-8 animate">
         {t('service.screen.2.description')}
       </p>
     </div>
@@ -65,7 +65,7 @@ const t = useTranslations(lang);
       <div class="mx-auto max-w-7xl px-6 lg:px-8">
         <div class="mx-auto mt-16 sm:mt-20 lg:mt-24">
           <div class="text-center mb-24">
-            <h2 class="text-6xl font-black tracking-tight not-prose text-primary">{t('service.screen.3.title')}</h2>
+            <h2 class="text-6xl font-black tracking-tight not-prose text-primary animate">{t('service.screen.3.title')}</h2>
           </div>
           <dl class="grid grid-cols-1 gap-x-8 gap-y-10 place-content-stretch lg:max-w-none lg:grid-cols-2 lg:gap-y-16">
               <div class="overflow-hidden isolate relative p-10 rounded-box bg-base-300 not-prose">
@@ -130,8 +130,8 @@ const t = useTranslations(lang);
 
 
           <div class="mx-auto sm:text-center not-prose mt-44">
-            <h2 class="text-6xl font-black tracking-tight text-primary">{t('service.price.title')}</h2>
-            <p class="mt-6 text-lg leading-8 flex flex-col-reverse w-full" set:html={t('service.price.subTitle')}> <a class="link link-primary" href={`/${lang}/terms`}>{t('service.price.subTitle.link')}</a></p>
+            <h2 class="text-6xl font-black tracking-tight text-primary animate">{t('service.price.title')}</h2>
+            <p class="mt-6 text-lg leading-8 flex flex-col-reverse w-full animate" set:html={t('service.price.subTitle')}> <a class="link link-primary" href={`/${lang}/terms`}>{t('service.price.subTitle.link')}</a></p>
           </div>
 
           <div class="mt-10">
@@ -440,9 +440,9 @@ const t = useTranslations(lang);
               </div>
             </div>
             <div class="grid place-content-center place-items-center gap-y-5">
-              <h3 class="text-lg tracking-tight text-primary">{t('service.screen.4.subTitle')}</h3>
-              <h2 class="text-7xl font-black tracking-tight not-prose mb-5">{t('service.screen.4.title')}</h2>
-              <p class="text-center max-w-4xl">
+              <h3 class="text-lg tracking-tight text-primary animate">{t('service.screen.4.subTitle')}</h3>
+              <h2 class="text-7xl font-black tracking-tight not-prose mb-5 animate">{t('service.screen.4.title')}</h2>
+              <p class="text-center max-w-4xl animate">
                 {t('service.screen.4.description')}
               </p>
               <a href={`/${lang}/contact`} class="mt-10 btn btn-primary z-10">{t('service.screen.4.button')}</a>
